--- a/package.json
+++ b/package.json
@@ -4,17 +4,37 @@
     "description": "![Design preview for the Calculator app coding challenge](./design/desktop-preview.jpg)",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "webpack serve --config webpack.dev.js",
+        "build": "webpack --config webpack.prod.js",
+        "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+        "prepare": "husky install",
+        "screenshot": "npx playwright screenshot --full-page en.wikipedia.org wiki-full.png"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^4.26.0",
+        "@typescript-eslint/parser": "^4.26.0",
         "browser-sync": "2.26.14",
-        "del": "^6.0.0",
-        "gulp": "4.0.2",
-        "gulp-babel": "^8.0.0",
-        "gulp-concat": "^2.6.1",
-        "gulp-sass": "4.1.0",
-        "gulp-uglify": "^3.0.2"
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "clean-webpack-plugin": "^4.0.0-alpha.0",
+        "copy-webpack-plugin": "^9.0.0",
+        "css-loader": "^5.2.5",
+        "eslint": "^7.28.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-watch": "^7.0.0",
+        "html-webpack-plugin": "^5.3.1",
+        "husky": "^6.0.0",
+        "lint-staged": "^11.0.0",
+        "mini-css-extract-plugin": "^1.6.0",
+        "prettier": "^2.3.1",
+        "sass-loader": "^11.1.1",
+        "style-loader": "^2.0.0",
+        "ts-loader": "^9.2.2",
+        "typescript": "^4.3.2",
+        "webpack": "^5.37.1",
+        "webpack-cli": "^4.7.0",
+        "webpack-dev-server": "^3.11.2"
     }
 }
