--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^4.26.0",
-        "@typescript-eslint/parser": "^4.26.0",
+        "@typescript-eslint/eslint-plugin": "^4.26.1",
+        "@typescript-eslint/parser": "^4.26.1",
         "browser-sync": "2.26.14",
         "browser-sync-webpack-plugin": "^2.3.0",
         "clean-webpack-plugin": "^4.0.0-alpha.0",
         "copy-webpack-plugin": "^9.0.0",
-        "css-loader": "^5.2.5",
+        "css-loader": "^5.2.6",
         "eslint": "^7.28.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
@@ -29,12 +29,13 @@
         "lint-staged": "^11.0.0",
         "mini-css-extract-plugin": "^1.6.0",
         "prettier": "^2.3.1",
-        "sass-loader": "^11.1.1",
+        "sass": "^1.34.1",
+        "sass-loader": "^12.1.0",
         "style-loader": "^2.0.0",
-        "ts-loader": "^9.2.2",
+        "ts-loader": "^9.2.3",
         "typescript": "^4.3.2",
-        "webpack": "^5.37.1",
-        "webpack-cli": "^4.7.0",
+        "webpack": "^5.38.1",
+        "webpack-cli": "^4.7.2",
         "webpack-dev-server": "^3.11.2"
     }
 }
